Fixed comments alignment in no-comments case

--- a/src/components/comment-components/comment-section/comment-section.scss
+++ b/src/components/comment-components/comment-section/comment-section.scss
@@ -19,9 +19,8 @@
     margin-bottom: 20px;
     display: flex;
     height: max-content;
-    min-width: 60%;
-    width: max-content;
-    max-width: 100%;
+    min-width:max-content;
+    width: 100%;
     flex-direction: column;
     align-items:flex-start;
     justify-content: center;
