--- a/src/components/route-user/event-page/event-page.scss
+++ b/src/components/route-user/event-page/event-page.scss
@@ -30,6 +30,7 @@
     .commentSection {
         //width: 1300px;
         max-width: 80%;
+        width: 80%;
     }
 }
 
